# context-project

./: .ctxignore.default  .gitignore  .pre-commit-hooks.yaml  AGENTS.md  AGENT_FIRST_OVERHAUL.md  CONTEXT.md  CONTRIBUTING.md  GATE_CLOSEOUT.md  GPT5.4-dump.md  Grok4.2-dump.md  PHASE16_HANDOFF.md  README.md  RUNBOOK.md  TODOS.md  architecture.md  mcp.json  package-lock.json  package.json  pyproject.toml  rules.md  state.md
.githooks/: CONTEXT.md  pre-commit
.github/: CONTEXT.md
.github/actions/: CONTEXT.md
.github/actions/ctx-check/: CONTEXT.md  action.yml
.github/workflows/: CONTEXT.md  ctx-check.yml  pr-checks.yml  publish.yml  tests.yml
.husky/: CONTEXT.md  pre-commit  pre-push
.obsidian/: workspace.json
archive/: AGENTS-v0-roadmap.md  CONTEXT.md  Core Idea.md  Opus4.6-plan.md  Opus4.6.md
archive/reflections/: 2026-03-14-phase10-reflection.md  2026-03-14-phase11-reflection.md  2026-03-14-phase12-reflection.md  2026-03-14-phase13-reflection.md  2026-03-14-phase14-reflection.md  2026-03-14-phase15-reflection.md  2026-03-14-phase4-reflection.md  2026-03-14-phase5-reflection.md  2026-03-14-phase6-reflection.md  2026-03-14-phase7-reflection.md  2026-03-14-phase8-reflection.md  2026-03-14-phase9-reflection.md  2026-03-15-phase16-reflection.md  2026-03-16-phase17-reflection.md  2026-03-16-phase18-reflection.md  2026-03-17-phase21-reflection.md  2026-03-18-afo-stage1-6-reflection.md  2026-03-19-phase25-reflection.md  2026-03-20-api-evaluation-reflection.md  CONTEXT.md  PHASE20_REFLECTION.md
docs/: CONTEXT.md  phase28-running-board.md  phase29-preflight.md
docs/afo/: 00-conventions.md  01-output-broker.md  02-unified-api.md  03-config-and-bootstrap.md  04-concurrency.md  05-mcp-server.md  06-docs-and-discovery.md  07-workflow-patterns.md  CONTEXT.md
docs/designs/: ctx-init.md  running-board.md
documents/: CONTEXT.md  agent-first-plan.md  agent-first-thesis.md
src/: CONTEXT.md
src/ctx/: .ctxignore.default  CONTEXT.md  __init__.py  __main__.py  api.py  cli.py  config.py  generator.py  git.py  hasher.py  ignore.py  init.py  language_detector.py  llm.py  lock.py  manifest.py  mcp_server.py  output.py  preflight.py  server.py  stats_board.py  watcher.py
src/ctx/lang_parsers/: CONTEXT.md  csharp_parser.py  elixir_parser.py  go_parser.py  java_parser.py  js_ts_parser.py  kotlin_parser.py  php_parser.py  python_parser.py  ruby_parser.py  rust_parser.py  swift_parser.py
tests/: CONTEXT.md  conftest.py  test_agent_handoff.py  test_api.py  test_cli.py  test_cli_compat.py  test_config.py  test_csharp_parser.py  test_docs.py  test_elixir_parser.py  test_generator.py  test_git.py  test_go_parser.py  test_hasher.py  test_ignore.py  test_init.py  test_integration.py  test_java_parser.py  test_js_ts_parser.py  test_kotlin_parser.py  test_language_detector.py  test_llm.py  test_lock.py  test_main.py  test_manifest.py  test_mcp_server.py  test_output.py  test_php_parser.py  test_preflight.py  test_prompts.py  test_python_parser.py  test_ruby_parser.py  test_rust_parser.py  test_server.py  test_setup.py  test_stats_board.py  test_swift_parser.py  test_trust.py  test_watcher.py
tests/fixtures/: CONTEXT.md
tests/fixtures/sample_project/: CONTEXT.md  README.md
tests/fixtures/sample_project/docs/: CONTEXT.md  guide.md
tests/fixtures/sample_project/src/: CONTEXT.md  main.py  utils.py
