[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ctx-tool"
dynamic = ["version"]
description = "Filesystem-native context layer for AI agents — generates CONTEXT.md manifests for codebase navigation"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
keywords = ["ai", "agent", "context", "codebase", "mcp", "manifest", "llm", "documentation"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Documentation",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
    "Topic :: Utilities",
]
dependencies = [
    "click>=8.1",
    "anthropic>=0.40",
    "openai>=1.50",
    "pyyaml>=6.0",
    "pathspec>=0.12",
    "watchdog>=4.0",
    "tiktoken>=0.7",
]

[project.urls]
Homepage = "https://github.com/mschwar/context-project"
Repository = "https://github.com/mschwar/context-project"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-mock>=3.12",
    "fastapi>=0.110.0",
    "uvicorn>=0.29.0",
]
serve = [
    "fastapi>=0.110.0",
    "uvicorn>=0.29.0",
]

[project.scripts]
ctx = "ctx.cli:cli"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
ctx = [".ctxignore.default"]

[tool.setuptools.dynamic]
version = {attr = "ctx.__version__"}

[tool.pytest.ini_options]
addopts = "-p no:cacheprovider"
